# historical_weather

./: Cargo.toml  README.md
.github/workflows/: bloat.yml  clippy.yml  markdown.yml  markdownlinks.yml  rust.yml  rustfmt.yml
src/: data_access.rs  downloader.rs  main.rs  stations.rs  temperature_calculator.rs
