[package]
name = "historical_weather"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.2"
tokio = { version = "1.11.0", features = ["full"] }
reqwest = "0.11"
anyhow = "1.0"
regex = "1.5"
zip = "0.5"

[profile.release]
lto = true